--- a/README.org
+++ b/README.org
@@ -1,20 +1,18 @@
-# zaber_device_python
+#+TITLE: zaber_device_python
+#+AUTHOR: Peter Polidoro
+#+EMAIL: peterpolidoro@gmail.com
 
-This Python package (zaber\_device) creates a class named ZaberDevice,
-which contains an instance of serial\_device2.SerialDevice and adds
-methods to it to interface to Zaber motorized linear slides.
+* Package Information
+  - Author :: Peter Polidoro
+  - License :: BSD
 
-Authors:
+  This Python package (zaber_device) creates a class named ZaberDevice,
+  which contains an instance of serial_device2.SerialDevice and adds
+  methods to it to interface to Zaber motorized linear slides.
 
-Peter Polidoro <polidorop@janelia.hhmi.org>
+* Example Usage
 
-License:
-
-BSD
-
-## Example Usage
-
-```python
+  #+BEGIN_SRC python
 from zaber_device import ZaberDevice
 dev = ZaberDevice() # Might automatically find device if one available
 # if it is not found automatically, specify port directly
@@ -50,9 +48,9 @@ dev.get_position()
 dev.move_to_stored_position(0)
 dev.get_position()
 [20000, 10000]
-```
+  #+END_SRC
 
-```python
+  #+BEGIN_SRC python
 from zaber_device import ZaberDevices
 devs = ZaberDevices()  # Might automatically find all available devices
 # if they are not found automatically, specify ports to use
@@ -61,9 +59,9 @@ devs = ZaberDevices(use_ports=['/dev/tty.usbmodem262471','/dev/tty.usbmodem26247
 devs = ZaberDevices(use_ports=['COM3','COM4']) # Windows
 devs.keys()
 dev = devs[serial_number]
-```
+  #+END_SRC
 
-```python
+  #+BEGIN_SRC python
 from zaber_device import ZaberStage
 stage = ZaberStage()  # Might automatically find all available devices
 # if they are not found automatically, specify ports to use
@@ -119,28 +117,28 @@ stage.get_positions()
 stage.move_to_stored_x_position(0)
 stage.get_positions()
 [49.99980078125, 74.99994921875, 0.0]
-```
+  #+END_SRC
 
-## First Time Device Setup
+* First Time Device Setup
 
-```shell
+  #+BEGIN_SRC sh
 ipython
-```
+  #+END_SRC
 
-```python
+  #+BEGIN_SRC python
 from zaber_device import ZaberDevice
 dev = ZaberDevice()
 dev.restore_settings()
 dev.renumber()
-```
+  #+END_SRC
 
-## First Time Stage Setup Example
+* First Time Stage Setup Example
 
-```shell
+  #+BEGIN_SRC sh
 ipython
-```
+  #+END_SRC
 
-```python
+  #+BEGIN_SRC python
 from zaber_device import ZaberDevice
 dev = ZaberDevice()
 dev.restore_settings()
@@ -150,13 +148,12 @@ dev.set_alias(0,10)
 dev.set_alias(1,10)
 dev.set_alias(2,11)
 dev.set_alias(3,11)
-```
+  #+END_SRC
 
-## Setting Zaber Stage Units
+* Setting Zaber Stage Units
+** Find Actuator ID
 
-### Find Actuator ID
-
-```python
+   #+BEGIN_SRC python
 from zaber_device import ZaberStage
 stage = ZaberStage() # Automatically finds devices if available
 stage.get_aliases()
@@ -165,29 +162,29 @@ stage.set_x_axis(123,10)
 stage.set_y_axis(123,11)
 stage.get_actuator_ids()
 (4452, 4452, None)
-```
+   #+END_SRC
 
-### Find Microstep Size
+** Find Microstep Size
 
-[Lookup Zaber Device Name from Device ID](http://www.zaber.com/support/?tab=ID%20Mapping#tabs)
+   [[http://www.zaber.com/support/?tab=ID%20Mapping#tabs][Lookup Zaber Device Name from Device ID]]
 
-Example: 4452 = T-LSR450B
+   Example: 4452 = T-LSR450B
 
-[Search for Zaber Device Name to find Detailed Specs](http://zaber.com/products/)
+   [[http://zaber.com/products/][Search for Zaber Device Name to find Detailed Specs]]
 
-Find 'Microstep Size (Default Resolution)'
+   Find 'Microstep Size (Default Resolution)'
 
-Example: T-LSR450B = 0.49609375 µm
+   Example: T-LSR450B = 0.49609375 µm
 
-### Set Microstep Size
+** Set Microstep Size
 
-Example: T-LSR450B = 0.49609375 µm
+   Example: T-LSR450B = 0.49609375 µm
 
-1µm = 1e-3mm
+   1µm = 1e-3mm
 
-To set units of mm, set microstep_size to 0.49609375e-3
+   To set units of mm, set microstep_size to 0.49609375e-3
 
-```python
+   #+BEGIN_SRC python
 from zaber_device import ZaberStage
 stage = ZaberStage() # Automatically finds devices if available
 stage.get_aliases()
@@ -200,25 +197,25 @@ stage.get_x_microstep_size()
 stage.set_y_microstep_size(0.49609375e-3)
 stage.get_y_microstep_size()
 0.00049609375
-```
+   #+END_SRC
 
-### Find Travel
+** Find Travel
 
-[Lookup Zaber Device Name from Device ID](http://www.zaber.com/support/?tab=ID%20Mapping#tabs)
+   [[http://www.zaber.com/support/?tab=ID%20Mapping#tabs][Lookup Zaber Device Name from Device ID]]
 
-Example: 4452 = T-LSR450B
+   Example: 4452 = T-LSR450B
 
-[Search for Zaber Device Name to find Detailed Specs](http://zaber.com/products/)
+   [[http://zaber.com/products/][Search for Zaber Device Name to find Detailed Specs]]
 
-Find 'Travel Range'
+   Find 'Travel Range'
 
-Example: T-LSR450B = 450mm
+   Example: T-LSR450B = 450mm
 
-### Set Travel
+** Set Travel
 
-Example: T-LSR450B = 450mm
+   Example: T-LSR450B = 450mm
 
-```python
+   #+BEGIN_SRC python
 from zaber_device import ZaberStage
 stage = ZaberStage() # Automatically finds devices if available
 stage.get_aliases()
@@ -246,25 +243,25 @@ stage.get_positions()
 [112.500171875, 224.9993515625, 0.0]
 stage.get_positions_percent()
 (25.000038194444446, 49.99985590277778, 0.0)
-```
+   #+END_SRC
 
-## Installation
+* Installation
 
-[Setup Python](https://github.com/janelia-pypi/python_setup)
+  [[https://github.com/janelia-pypi/python_setup][Setup Python]]
 
-### Linux and Mac OS X
+** Linux and Mac OS X
 
-```shell
+   #+BEGIN_SRC sh
 mkdir -p ~/virtualenvs/zaber_device
 virtualenv ~/virtualenvs/zaber_device
 source ~/virtualenvs/zaber_device/bin/activate
 pip install zaber_device
-```
+   #+END_SRC
 
-### Windows
+** Windows
 
-```shell
+   #+BEGIN_SRC sh
 virtualenv C:\virtualenvs\zaber_device
 C:\virtualenvs\zaber_device\Scripts\activate
 pip install zaber_device
-```
+   #+END_SRC
