Switch from serial_device2 to serial_interface

--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@
   - Email :: peterpolidoro@gmail.com
 
   This Python package (zaber_device) creates a class named ZaberDevice,
-  which contains an instance of serial_device2.SerialDevice and adds
+  which contains an instance of serial_interface.SerialInterface and adds
   methods to it to interface to Zaber motorized linear slides.
 
 * Example Usage
